src/test/ui/rfc-2005-default-binding-mode/const.stderr
error[E0308]: mismatched types
  --> $DIR/const.rs:14:9
   |
LL |     match &f {
   |           -- this expression has type `&Foo`
LL |         FOO => {},
   |         ^^^ expected `&Foo`, found struct `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
